# Robotic-Auto-charging

./: README.md  bulid.sh
apriltag_detection/: CMakeLists.txt  apriltag.rviz
apriltag_detection/config/: ost.yaml  tags.yaml
apriltag_detection/doc/: tag.docx
apriltag_detection/launch/: camera.launch  change_assemble.launch  continuous_detection.launch  tag.launch
apriltag_detection/scripts/: nav_pose.py  parameter_nav_pose.py  tag_camera.py  tag_camera2.py  tag_camera3.py  tag_camera_v2.0.py  tag_camera_v2.1.py  tag_camera_v3.0.py  test_x.py
call_trajectory/: CMakeLists.txt  package.xml
call_trajectory/scripts/: NavWindowUI.py  Navwindow.py
call_trajectory/src/: costmap.cpp
